css/style.css
/* ... */
.single-works .icon {
  position: absolute;
  border-radius: 50%;
  top: 0;
  right: 25px;
  background: #ffffff;
  width: 45px;
  text-align: center;
  height: 45px;
  line-height: 42px;
  opacity: 0;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  visibility: hidden;
  cursor: pointer;
}

.single-works .icon img {
  width: 19px !important;
  margin: 13px auto;
}

.single-works .icon:hover {
  background: #0e314c;
  color: #ffffff;
}

.single-works .works-content {
  position: absolute;
  bottom: -60px;
  left: 0;
  padding: 20px;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  opacity: 0;
  visibility: hidden;
}

.single-works .works-content h3 {
  font-size: 18px;
  margin-bottom: 15px;
}

.single-works .works-content h3 a {
  color: #ffffff;
}

.single-works .works-content h3 a:hover {
  text-decoration: underline;
}

.single-works .works-content p {
  color: #ffffff;
}

.single-works:hover::before {
  opacity: 0.9;
  visibility: visible;
  z-index: 1;
}

.single-works:hover .icon {
  opacity: 1;
  visibility: visible;
  top: 25px;
  z-index: 5;
}

.single-works:hover .works-content {
  opacity: 1;
  visibility: visible;
  bottom: 0;
  z-index: 5;
}

.vision .m-img img {
  display: none !important;
}

/* video popup */

.video-popup {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 9999;
}

.video-popup-content {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.vemo-videos {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.vemo-videos::-webkit-media-controls {
  display: none !important;
}

.scroll-btn {
  position: fixed;
  bottom: 100px;
  left: 50%;
  transform: translateX(-50%);
  background-color: #fff;
  border: none;
  border-radius: 27px;
  padding: 10px;
  cursor: pointer;
  font-size: 20px;
  animation: scrollMotion 1.5s ease-in-out infinite alternate;
}

.mute-unmute-button{
  right: 2vw;
  bottom: 5vh;
  border-radius: 5px;
  background-color: transparent;
}


/* Mute-Unmute button start */
.mute-unmute-container {
  /* background-color: rgb(159, 188, 216); */
  position: fixed;
  width:100%;
  height:100%;
  left:0;
  top:0;
}

@keyframes pulse {
  to {
    box-shadow: 0 0 0 85px yellow;
  }
}


.toggle-sound {
  position: fixed;
  bottom: 12vh;
	left: calc(50% + 60px);
	background-color: #ffffff;
	width: 55px;
	height: 55px;
  line-height: 55px;
  text-align: center;
  color: black;
	border-radius: 50%;
	cursor: pointer;
	z-index: 99;
	animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
	box-shadow: 0 0 0 0 #F06292;
}

.toggle-sound.sound-mute {
	box-shadow: none;
}

/* @-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
@-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
@-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}} */


.sound {
	width: 103%;
	height: 100%;
	position: absolute;
	cursor: pointer;
	display: inline-block;
	left: 0;
	top: 0;
	margin-left: -15%;
}
.sound--icon {
	color: inherit;
	line-height: inherit;
	font-size: 1.6rem;
	display: block;
	margin: auto;
	text-align: left;
	padding-left: 16px;
}
.sound--wave {
	position: absolute;
	border: 2px solid transparent;
	border-right: 2px solid black;
	border-radius: 50%;
	transition: all 200ms;
	margin: auto;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
}
.sound--wave_one {
  width: 45%;
  height: 40%;
}
.sound--wave_two {
  width: 70%;
  height: 62%;
}
.sound--wave_three {
  width: 95%;
  height:75%;
}
.sound-mute .sound--wave {
  border-radius: 0;
  width: 35%;
  height: 35%;
  border-width: 0 2px 0 0;
  left: 5px;
}
.sound-mute .sound--wave_one {
  -webkit-transform: rotate(45deg) translate3d(0, -50%, 0);
          transform: rotate(45deg) translate3d(0, -50%, 0);
}
.sound-mute .sound--wave_two {
  -webkit-transform: rotate(-45deg) translate3d(0, 50%, 0);
          transform: rotate(-45deg) translate3d(0, 50%, 0);
}
.sound-mute .sound--wave_three {
    opacity: 0;
    transform: translateX(-46%);
    height: 20%;

}

/* Mute-Unmute button start */

@keyframes scrollMotion {
  0% {
    transform: translateX(-50%) translateY(0);
  }
  50% {
    transform: translateX(-50%) translateY(-10px);
  }
  100% {
    transform: translateX(-50%) translateY(0);
  }
}

@media screen and (max-width: 991px) {
  .vision img {
    display: none;
  }

  .vision .m-img img {
    display: block !important;
    margin: auto;
  }
}

@media screen and (max-width: 768px) {
  .single-works {
    flex-basis: 45% !important;
  }
}

@media screen and (max-width: 600px) {
  .single-works {
    flex-basis: 95% !important;
  }
  .vemo-videos {
    object-fit: cover;
  }
}

